# ChangeLog for dev-haskell/hslogger
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/hslogger/ChangeLog,v 1.3 2007/07/27 23:46:43 dcoutts Exp $

  27 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> hslogger-1.0.1.ebuild:
  Add missing deps.

  27 Jul 2007; Lennart Kolmodin <kolmodin@gentoo.org> hslogger-1.0.1.ebuild:
  Add profile USE flag and fix SRC_URI.

*hslogger-1.0.1 (26 Jul 2007)

  26 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> +metadata.xml,
  +hslogger-1.0.1.ebuild:
  Initial version, split out from missingh.
