@@ -1,0 +1,3 @@
+MD5 402a0000fd59ee437377773cbe723f4f hslogger-1.0.2.tar.gz 21563
+RMD160 1d54296b7c7c9e306d9cd243f5a9429f0f7f563d hslogger-1.0.2.tar.gz 21563
+SHA256 5897772f0c59e0cdbae21c94f14e5a435a9434ce22b1951cb5e6be5fb4d90396 hslogger-1.0.2.tar.gz 21563
