@@ -1,6 +1,11 @@
 # ChangeLog for dev-haskell/hslogger
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/hslogger/ChangeLog,v 1.3 2007/07/27 23:46:43 dcoutts Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/hslogger/ChangeLog,v 1.4 2007/12/13 17:22:18 dcoutts Exp $
+
+*hslogger-1.0.2 (13 Dec 2007)
+
+  13 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> +hslogger-1.0.2.ebuild:
+  New version.
 
   27 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> hslogger-1.0.1.ebuild:
   Add missing deps.
